k8s/mysql-deployment-with-init-container.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-demo-db
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-demo-db
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:5.7
          name: mysql-demo-db-1
          args:
            - --default-authentication-plugin=mysql_native_password
            - --lower_case_table_names=1
          ports:
            - containerPort: 3306
              name: mysql
          livenessProbe:
            exec:
              # command: ["mysqladmin", "-uroot", "-p$MYSQL_ROOT_PASSWORD", "ping"]
              command:
              - bash
              - "-c"
              - |
                mysqladmin -uroot -p$MYSQL_ROOT_PASSWORD ping &> /dev/null
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              # Check we can execute queries over TCP (skip-networking is off).
              # command: ["mysql", "-h", "127.0.0.1", "-uroot", "-p$MYSQL_ROOT_PASSWORD", "-e", "SELECT 1"]
              command:
              - bash
              - "-c"
              - |
                mysql -h127.0.0.1 -uroot -p$MYSQL_ROOT_PASSWORD -e'SELECT 1'
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
          volumeMounts:
            - name: mysqldata
              mountPath: /var/lib/mysql
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-script
          persistentVolumeClaim:
            claimName: init-script
        - name: mysqldata
          persistentVolumeClaim:
            claimName: mysql-pv-claim
