k8s/4-portal-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-demo-app
spec:
  rules:
  - host: "127.0.0.1.xip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portal-demo-app
            port:
              number: 3000
